Add hitbox tests